gitops/environments/envs/sta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "<WL_SERVICE_NAME>"
  annotations:
    # change issuer to letsencrypt-prod if you want to avoid untrusted cert,
    # but be sure that you wouldn't hit rate limits - https://letsencrypt.org/docs/staging-environment/
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "sta-<WL_SERVICE_URL>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "<WL_SERVICE_NAME>"
                port:
                  name: http
  tls:
    - hosts:
        - "sta-<WL_SERVICE_URL>"
      secretName: <WL_SERVICE_NAME>-sta-tls
